Closed
Bug 1268849
Opened 6 years ago
Closed 6 years ago
crash in nsPIDOMWindowOuter::GetServiceWorkersTestingEnabled
Categories
(Core :: DOM: Service Workers, defect)
Tracking
()
RESOLVED
FIXED
mozilla49
Tracking | Status | |
---|---|---|
firefox46 | --- | unaffected |
firefox47 | --- | unaffected |
firefox48 | --- | fixed |
firefox49 | --- | fixed |
People
(Reporter: marco, Assigned: bkelly)
References
Details
(Keywords: crash, regression, Whiteboard: btpp-active)
Crash Data
Attachments
(2 files)
1.19 KB,
patch
|
Details | Diff | Splinter Review | |
916 bytes,
patch
|
bzbarsky
:
review+
lizzard
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is report bp-bd0815ec-2571-4884-b0ba-2db3b2160428. ============================================================= This signature first appeared on 2016-04-26, so just a few days ago. There are 9 crashes from a single installation of Firefox 48, 6 crashes from 5 installations of Firefox 49. Looks like a null pointer access (EXCEPTION_ACCESS_VIOLATION_READ at address 0x88).
Comment 1•6 years ago
|
||
Every one I looked at is coming from nsGlobalWindow::GetCaches.
Assignee | ||
Comment 3•6 years ago
|
||
This is almost certainly from bug 1266221.
Comment 4•6 years ago
|
||
It's not clear to me how to reproduce this in a test.
Attachment #8747250 -
Flags: review?(khuey)
Updated•6 years ago
|
Assignee: bkelly → josh
Updated•6 years ago
|
Whiteboard: btpp-followup-2016-05-06 → btpp-active
Comment 5•6 years ago
|
||
Comment on attachment 8747250 [details] [diff] [review] Guard against a null outer window when calling GetCaches Nevermind, this is probably incorrect given the previous diagnosis.
Attachment #8747250 -
Flags: review?(khuey)
Updated•6 years ago
|
Assignee: josh → bkelly
Assignee | ||
Comment 6•6 years ago
|
||
Attachment #8747253 -
Flags: review?(bzbarsky)
Assignee | ||
Comment 7•6 years ago
|
||
I'm pretty confident this is the problem based on the timeline. Bug 1266221 landed on April 25 and crashes began on April 26.
Assignee | ||
Updated•6 years ago
|
status-firefox46:
--- → unaffected
status-firefox47:
--- → unaffected
status-firefox48:
--- → affected
status-firefox49:
--- → affected
![]() |
||
Comment 8•6 years ago
|
||
Comment on attachment 8747253 [details] [diff] [review] Don't crash in GetServiceWorkersTestingEnabled if window is torn down and GetScriptableTop() returns nullptr. r=bz r=me
Attachment #8747253 -
Flags: review?(bzbarsky) → review+
Assignee | ||
Comment 10•6 years ago
|
||
Comment on attachment 8747253 [details] [diff] [review] Don't crash in GetServiceWorkersTestingEnabled if window is torn down and GetScriptableTop() returns nullptr. r=bz Approval Request Comment [Feature/regressing bug #]: bug 1266221 [User impact if declined]: Possible crashes if certain js code races with a closing window. [Describe test coverage new/current, TreeHerder]: Just existing tests which did not catch this problem. Its hard to reproduce the race. We caught this in crashstats. [Risks and why]: Minimal. We're simply adding a nullptr check. [String/UUID change made/needed]: None.
Attachment #8747253 -
Flags: approval-mozilla-aurora?
Comment 11•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/f3a5c8b5e170
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
Comment on attachment 8747253 [details] [diff] [review] Don't crash in GetServiceWorkersTestingEnabled if window is torn down and GetScriptableTop() returns nullptr. r=bz Crash fix, recent regression from 48, please uplift to aurora.
Attachment #8747253 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Assignee | ||
Comment 13•6 years ago
|
||
remote: https://hg.mozilla.org/releases/mozilla-aurora/rev/2d3a15d3e47e
Updated•6 years ago
|
Version: unspecified → 48 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•