Bug 1268849 Don't crash in GetServiceWorkersTestingEnabled if window is torn down and GetScriptableTop() returns nullptr. r=bz